--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
         "YOLO"
       </p>
 
-      <p id="myBlinkingDiv">
-        Summer 16
-      </p>
-
-      <marquee behavior="slide" direction="left">Running through the 6 with my woes</marquee>
+      <marquee behavior="slide" direction="right">Running through the 6 with my woes</marquee>
 
   </h3>
 
